Unit test for rest handle get meal
