# src/handlers/get_meals.go
@@ -8,6 +8,7 @@ import (
 	"cooking.buresovi.net/src/gen-server/models"
 	"cooking.buresovi.net/src/gen-server/restapi/operations/meals"
 	"github.com/go-openapi/runtime/middleware"
+	"github.com/go-openapi/strfmt"
 )
 
 func NewGetMealHandler(a app.App) func(params meals.GetMealsParams) middleware.Responder {
@@ -15,19 +16,18 @@ func NewGetMealHandler(a app.App) func(params meals.GetMealsParams) middleware.R
 
 	return func(params meals.GetMealsParams) middleware.Responder {
 		d := params.Date
-		params.Date.Value()
-
-		time.Date(2023, 8, 3, 0, 0, 0, 0, time.UTC)
-
 		mmeals, _ := app.MealSvc.FindMeals(time.Time(*d), context.TODO())
 
 		var payload []*models.Meal
 		for _, mm := range mmeals {
 
 			payload = append(payload, &models.Meal{
-				MealAuthor: mm.Author.Firstname,
 				MealID:     int64(mm.Id),
-				MealType:   mm.MealName,
+				MealType:   mm.MealType.String(),
+				MealAuthor: mm.Author.Firstname,
+				MealDate:   strfmt.Date(mm.MealDate),
+				MealName:   mm.MealName,
+				Kcalories:  int64(mm.KCalories),
 			})
 		}
 
